--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://s3lven.github.io/portfolio/",
+  "homepage": "https://s3lven.github.io/portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
