build: moved and renamed all static assets

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,5 +27,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "src/assets/social-icons.tsxsrc/assets/mergen-icon.tsx.tsx"]
 }
